# pico-pandagotchi

./: .gitignore  Animator.cpp  Animator.hpp  CMakeLists.txt  PandaStateMachine.cpp  PandaStateMachine.hpp  README  README.md  faces.cpp  faces.hpp  globals.hpp  images.hpp  logging.cpp  logging.hpp  main.cpp  notes.h  sequences.hpp  sounds.hpp
images/: food.xcf  icons.xcf  panda_gotchi.xcf  panda_gotchi_bak.xcf  wave.xcf
python/: README.md  cmake_test.py  compile_animations.py  compile_images.py  compile_sounds.py  requirements.txt
yaml/: animations.yaml  faces.yaml  sounds.yaml
